hubble-kustomize/overlay/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: the-service
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: hello
    deployment: hello
  $patch: replace
