hubble-kustomize/overlay/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: the-ingress
spec:
  rules:
  - host: helloworld.prodcluster.tanzu.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: the-service
            port:
              number: 8080
